Closed
Bug 1676997
Opened 5 years ago
Closed 5 years ago
Crash in [@ xpc::NativeGlobal] from PromiseJobRunnable::Suppressed()
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
84 Branch
People
(Reporter: mccr8, Assigned: smaug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Crash report: https://crash-stats.mozilla.org/report/index/4720e58c-8aa9-4846-8fba-304d20201112
Reason: EXC_BAD_ACCESS / KERN_INVALID_ADDRESS
Top 10 frames of crashing thread:
0 XUL xpc::NativeGlobal js/xpconnect/wrappers/WrapperFactory.cpp:778
1 XUL mozilla::CycleCollectedJSContext::PerformMicroTaskCheckPoint xpcom/base/CycleCollectedJSContext.cpp:631
2 XUL mozilla::EventListenerManager::HandleEventInternal dom/events/EventListenerManager.cpp:1270
3 XUL mozilla::EventTargetChainItem::HandleEventTargetChain dom/events/EventDispatcher.cpp:554
4 XUL mozilla::EventDispatcher::Dispatch dom/events/EventDispatcher.cpp:1093
5 XUL mozilla::EventDispatcher::DispatchDOMEvent dom/events/EventDispatcher.cpp:1195
6 XUL mozilla::DOMEventTargetHelper::DispatchEvent dom/events/DOMEventTargetHelper.cpp:145
7 XUL mozilla::dom::EventTarget::DispatchEvent dom/events/EventTarget.cpp:183
8 XUL mozilla::dom::indexedDB:: dom/indexedDB/ActorsChild.cpp:626
9 XUL mozilla::dom::indexedDB::BackgroundRequestChild::HandleResponse dom/indexedDB/ActorsChild.cpp:2431
There are a few of these crashes. PromiseJobRunnable::Run() does a null check on the callback, but Suppressed() does not.
| Assignee | ||
Updated•5 years ago
|
Assignee: nobody → bugs
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by opettay@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/de5bd537b1d6
null check callback in PromiseJobRunnable::Suppressed(), r=mccr8
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox84:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
Updated•4 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•