Bug 1676997 - null check callback in PromiseJobRunnable::Suppressed(), r=mccr8

Differential Revision: https://phabricator.services.mozilla.com/D96949